--- a/payment_twikey/views/res_partner_view.xml
+++ b/payment_twikey/views/res_partner_view.xml
@@ -4,6 +4,7 @@
        <field name="name">res.partner.view.twikey.form.inherit</field>
        <field name="model">res.partner</field>
        <field name="inherit_id" ref="base.view_partner_form" />
+        <field name="priority">10</field>
        <field name="arch" type="xml">
            <xpath expr="//form//sheet" position="before">
                <header>
@@ -21,4 +22,37 @@
            </xpath>
        </field>
    </record>
+
+    <record id="res_partner_act_window_sms_composer_multi" model="ir.actions.act_window">
+        <field name="name">Invite mandate</field>
+        <field name="type">ir.actions.act_window</field>
+        <field name="res_model">res.partner</field>
+        <field name="view_mode">tree</field>
+    </record>
+    <record id="res_partner_act_window_sms_composer_single" model="ir.actions.act_window">
+        <field name="name">Invite mandate</field>
+        <field name="res_model">res.partner</field>
+        <field name="view_mode">form</field>
+        <field name="binding_model_id" ref="base.model_res_partner"/>
+        <field name="binding_view_types">form</field>
+    </record>
+
+    <record id="twikey_invite_partner_mandate" model="ir.actions.server">
+        <field name="name">Invite mandate</field>
+        <field name="model_id" ref="base.model_res_partner"/>
+        <field name="binding_model_id" ref="base.model_res_partner"/>
+        <field name="state">code</field>
+        <field name="code">
+            if records:
+                action = records.action_invite_customer()
+        </field>
+    </record>
+
+    <menuitem
+            id="menu_action_mandate"
+            action="twikey_invite_partner_mandate"
+            parent="contacts.res_partner_menu_config"
+            sequence="1"
+    />
+
 </odoo>
