Improved purchase invoice behaviour

--- a/payment_twikey/views/res_config_settings_views.xml
+++ b/payment_twikey/views/res_config_settings_views.xml
@@ -14,25 +14,68 @@
                         </div>
                         <div>
                             <div class="content-group mt16">
-                                <label for="twikey_base_url" class="o_light_label" />
+                                <label for="twikey_base_url" class="col-2 o_light_label" />
                                 <field name="twikey_base_url" />
                             </div>
-                            <div class="content-group mt16">
-                                <label for="twikey_api_key" class="o_light_label" />
+                            <div class="content-group">
+                                <label for="twikey_api_key" class="col-2 o_light_label" />
                                 <field name="twikey_api_key" />
                             </div>
-                            <div>
-                                    <button
-                                    name="test_twikey_connection"
+
+                            <div class="content-group mt16">
+                                <div class="o_setting_left_pane">
+                                    <field name="twikey_auto_collect"/>
+                                </div>
+                                <div class="o_setting_right_pane">
+                                    <label for="twikey_auto_collect"/>
+                                    <div class="text-muted">
+                                        Should Twikey try to collect invoices directly via a recurring payment method
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="content-group mt16">
+                                <div class="o_setting_left_pane">
+                                    <field name="twikey_send_invoice"/>
+                                </div>
+                                <div class="o_setting_right_pane">
+                                    <label for="twikey_send_invoice"/>
+                                    <div class="text-muted">
+                                        Send all invoice by default to Twikey
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="content-group mt16">
+                                <div class="o_setting_left_pane">
+                                    <field name="twikey_include_purchase"/>
+                                </div>
+                                <div class="o_setting_right_pane">
+                                    <label for="twikey_include_purchase"/>
+                                    <div class="text-muted">
+                                        Also send purchase invoice to Twikey for payment
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="content-group mt16">
+                                <div class="o_setting_left_pane">
+                                    <field name="twikey_send_pdf"/>
+                                </div>
+                                <div class="o_setting_right_pane">
+                                    <label for="twikey_send_pdf"/>
+                                    <div class="text-muted">
+                                        Include the PDF of the invoice to Twikey (charges may apply)
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="mt8">
+                                <button name="test_twikey_connection"
                                     string="Test Connection"
                                     type="object"
                                     class="oe_link"
                                     icon="fa-arrow-right"
                                 />
-                                </div>
-                                <div>
-                                <button
-                                    name="twikey_sync_contract_template"
+                            </div>
+                            <div class="mt-2">
+                                <button name="twikey_sync_contract_template"
                                     string="Sync Twikey Profiles"
                                     type="object"
                                     class="oe_link"
