--- a/payment_twikey/views/mandate_details.xml
+++ b/payment_twikey/views/mandate_details.xml
@@ -33,14 +33,6 @@
                             <field name="lang" attrs="{'readonly': [('state', '!=', 'pending')]}" />
                         </group>
                     </group>
-                    <group>
-                        <group>
-                            <field name="address" readonly="1" />
-                            <field name="city" readonly="1" />
-                            <field name="zip" readonly="1" />
-                            <field name="country_id" readonly="1" />
-                        </group>
-                    </group>
                     <field name="description" placeholder="Description" attrs="{'readonly': [('state', '!=', 'pending')]}"/>
                 </sheet>
                 <div class="oe_chatter">
@@ -56,7 +48,7 @@
         <field name="name">twikey.mandate.details.view.twikey.tree</field>
         <field name="model">twikey.mandate.details</field>
         <field name="arch" type="xml">
-            <tree>
+            <tree create="false" delete="false">
                 <field name="partner_id" />
                 <field name="reference" />
                 <field name="contract_temp_id" />
